[tool.poetry]
name = "rags"
version = "0.1.0"
description = "Tools for vertex nomination (VN) on \"richly attributed graphs\"."
authors = ["Jeremy Silver <jeremyag@comcast.net>"]

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.45.0"
pandas = "^1.0.3"
numpy = "^1.18.2"
scipy = "^1.4.1"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
